# ihp130-design

./: .gitignore  Makefile  README.md  chipflow.toml  customer-jlr-testchip.code-workspace  pins.lock.bak  pyproject.toml  setup.cfg
.github/workflows/: main.yaml
hardware/bringup-board/: .gitignore  bringup-board.kicad_pcb  bringup-board.kicad_pro  bringup-board.kicad_sch  bringup_board_parts.kicad_sym  fp-lib-table  sym-lib-table
hardware/bringup-board/bringup_board_parts.pretty/: 145-PRS15024-12.kicad_mod
my_design/: design.py
my_design/board/: doit_glasgow.py
my_design/ips/: customer-jlr-testchip.code-workspace  export_spi_flash.py  glasgow_i2c.py  i2c.py  pdm.py  pwm.py  riscv_timer.py  spi.py  test_i2c.py  test_pdm.py  test_pwm.py  test_spi.py  uart.py
my_design/ips/i2c/: __init__.py  glasgow_i2c.py  i2c.py
my_design/ips/spi_flash/: __init__.py  iostream.py  qspi.py  spi_flash.py
my_design/openocd/: cv32e40p_board.cfg
my_design/sim/: doit_build.py  main.cc  models.cc  models.h
my_design/software/: doit_build.py  main.c
my_design/software/drivers/: i2c.h  motor_pwm.h  pdm.h  spi.h
my_design/steps/: _chipflow_top.py  board.py  export_verilog.py  silicon.py  sim.py  software.py
my_design/tests/: events_reference.json  input.json
my_design/tools/: json_compare.py
pyuvm_verif/: .gitignore  Makefile  testbench.py  testbench_spi.py  utils_spi.py
pyuvm_verif/verilog/: spi_wrap.v
