
# Project metadata

[project]
name = "gf130-design"
version = "0.0.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
  {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = "~=3.9"
dependencies = [
  "amaranth[builtin-yosys]>=0.5,<0.6",
  "amaranth-cv32e40p @ git+https://github.com/ChipFlow/amaranth-cv32e40p@main",
  "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git@main",
  "pyuvm~=2.9.1",
  "ziglang==0.11.0",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "pytest~=7.2.0",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.cmd = "pytest"

[tool.pdm.resolution.overrides]
yowasp-yosys = "0.40.0.68.post721.dev0"
