
# Project metadata

[project]
name = "ihp130-design"
version = "0.1.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
  {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = "!=3.10.1,!=3.10.2,<4.0,>3.10.0"
dependencies = [
  "amaranth[builtin-yosys]>=0.5,<0.6",
  "minerva @ git+https://github.com/minerva-cpu/minerva",
  "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
  "glasgow @ git+https://github.com/GlasgowEmbedded/glasgow#subdirectory=software",
  "ziglang~=0.13.0",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.2.0",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.cmd = "pytest"
lint = {shell = "echo Linting wit Ruff && ruff check"}
style = {shell = "echo Checking code style && pycodestyle check"}
check.composite = ["lint", "style"]

[tool.pdm.resolution.overrides]
yowasp-yosys = "0.40.0.68.post721.dev0"

[tool.ruff.lint]
ignore = ["F403", "F405", "F541"]
