
# Project metadata

[project]
name = "gf130-design"
version = "0.0.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
  {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = ">=3.13"
dependencies = [
    "amaranth[builtin-yosys]>=0.5.1",
    "amaranth-cv32e40p @ git+https://github.com/ChipFlow/amaranth-cv32e40p@update-amaranth-deps",
    "amaranth-orchard @ git+https://github.com/ChipFlow/amaranth-orchard@multi-oe",
    "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
    "cocotb>=1.9.2",
    "pyuvm~=3.0.0",
    "ziglang==0.11.0",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
test = [
  "pytest>=7.3.1",
]
#dev = [
#    "-e file:///${PROJECT_ROOT}/../chipflow-lib#egg=chipflow-lib"
#]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.cmd = "pytest"

[tool.pdm.resolution]
allow-prereleases = true

[tool.pyright]
include = ['my_design/**']
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportUnboundVariable = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
reportWildcardImportFromLibrary = false
reportMissingImports = "none"

[tool.ruff]
include = ["pyproject.toml", "**/*.py", "chipflow.toml"]

[tool.ruff.lint]
ignore = ['F403', 'F405']
